--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,8 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
-  color: #777; }
+  color: #777; 
+  background-color: #fff;}
 
 .info__header {
   display: grid;
